yoshimi 1.3.x

2015-5-7 Will
- Improved bank root and extended program change CC setting method.
- Corrected NRPN gui display issues
- Updated Docs

2015-5-6 Will
- Implemented Zyn-compatible NRPNs with extension for effect type and destination
  part number change.  (some gui improvements needed)
- Updated Docs.

2015-5-2 Will
- Improved NRPN handling of 14bit NRPNs and 'full' NRPNs with reversed data byte order.

2015-4-30 Will
- Fixed regression in distortion level.
- Added voice number to AddSynth oscillator editor.
- Implemented NRPN data increment and decrement.

2015-4-27 Will
- Fixed bug that stopped some rotary controls responding to mouse wheel.
- Re-orderd part effects window to more closely match system & insert.
- Made 'panic' stop fade at a fixed rate so it is now click free even for
  very high sample rate and small buffer size.

2015-4-25 Will
- Added part number and name to editing window title bars.
- Made it possible to silently disconnect/reconnect a part from all MIDI input.
- Improved config settings for Bank Root & Extended Program Change.

2015-4-24 Will
- Implemented 14bit NRPNs
- Implemented scroll wheel control of knobs
- Implemented X as well as Y knob control

2015-4-21 Will (vector)
- Some more small optimisations

2015-4-19 Will (vector)
- Fixed regressions caused by mixer gui changes!
- More adjustments giving greater flexibility to NRPNs

2015-4-18 Will (vector)
- Added NRPN and vector error checks and warnings
- Updated docs
- Very specific segfault with Rosegarden V12.4 and 'RootBankChange'
  test file has cleared! Confirmed it is still there on yoshimi 1.3.3
  puzzling :(
- Rationalised mixer panel gui, removing duplicates

2015-4-17 Will (vector)
- Implemented direct part channel change
- Corrected license anomalies
- Updated docs

2015-4-15 Will (vector)
- Implemented direct part CC change
- Corrected and updated Docs

2015-4-3 Will (vector)
- Implemented direct part program change