@@ -1,5 +1,9 @@
 yoshimi 1.3.x
 
+2015-5-12 Will
+- fixed asString bug that still appeared on some architectures.
+  Thanks to Stephen Parry for identifying the cause.
+
 2015-5-7 Will
 - Improved bank root and extended program change CC setting method.
 - Corrected NRPN gui display issues
